Resolves: tdf#130364 let font treeview fit to available dialog space

Change-Id: Ia000f4cfa041733fc84b45c955e69251c3ce9bcc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87871
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 49d8e5fb744534f4af7e5c7f08dee7a95bcc6ed5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87946
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>